#17433: Fix styling bug that Michael reported

--- a/docs/source/common/_static/tt_theme.css
+++ b/docs/source/common/_static/tt_theme.css
@@ -453,3 +453,7 @@ html.writer-html5
   background: var(--color-background-alt2) !important;
   color: var(--color-foreground) !important;
 }
+
+.rst-versions.shift-up {
+  overflow-y: auto;
+}
